spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_binding_to_undefined_name.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: c: No such argument
  ┌─ testinput:4:29
  │
4 │     Test$(a: true, b: true, c: true)
  │                             ^ No such argument


